sample-ingress-apps.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc
spec:
  type: LoadBalancer
  ports:
    - name: "http-port1"
      protocol: "TCP"
      port: 80
      targetPort: 80
    - name: "http-port2"
      protocol: "TCP"
      port: 8080
      targetPort: 80
    - name: "http-default"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: sample1

---

apiVersion: v1
kind: Pod
metadata:
  name: sample-ingress-apps-1
  labels:
    ingress-app: sample
spec:
  containers:
    - name: nginx-controller
      image: nginx:1.12
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: sample-ingress-apps-2
  labels:
    ingress-app: sample
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: sample-ingress-default
  labels:
    ingress-app: default
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
